src/test/ui/error-codes/E0225.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/E0225.rs:6:32
   |
LL |     let _: Box<std::io::Read + std::io::Write>;
   |                -------------   ^^^^^^^^^^^^^^ additional non-auto trait
   |                |
   |                first non-auto trait

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/E0225.rs:8:16
   |
LL | trait Foo = std::io::Read + std::io::Write;
   |             -------------   -------------- additional non-auto trait
   |             |
   |             first non-auto trait
...
LL |     let _: Box<Foo>;
   |                ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0225`.
